--- a/public/2Q1GCSLozano.html
+++ b/public/2Q1GCSLozano.html
@@ -6,7 +6,7 @@
            <meta name="description" content="1st Graded Exercise">
         <title> Our Favorite Genshin Streamers</title>
         <link rel="icon" type = "image/png" href = "https://upload-os-bbs.hoyolab.com/upload/2022/10/03/13055238/af50ff2c8361e49f129f9ef5a3973dce_2126175436198633191.png">
-           <link rel="stylesheet" href=https://raw.githubusercontent.com/MonrealKiko/2QSharedRepositoryCoLozanoMonrealPalec/main/sharedcss.css%22%3E>
+           <link rel="stylesheet" href="https://raw.githack.com/MonrealKiko/2QSharedRepositoryCoLozanoMonrealPalec/main/sharedcss.css">
         <script src="script.js" defer></script>
 
     
@@ -166,14 +166,7 @@
         }
 
 
-         footer {
-         background-color: #453930; 
-         color: #ffffff;            
-         text-align: center;        
-         padding: 20px;             
-         margin-top: 40px; 
-         border-top: 3px solid #453b32; 
-}
+         
 
  </style>
  <head>
@@ -251,7 +244,7 @@
   </tr>
 </table>
 
-<footer>
+<footer class="footer">
   <p>© Genshin Streamers Fanpage | Made by Fans for Fans </p>
   <a href="https://genshin.hoyoverse.com/en/" target="_hoyoverse"> Find More about Genshin Impact !</a>
   <p> Made by: Kuch Lozano | 9 - Cesium </p>
