--- a/public/2Q1GCSLozano.html
+++ b/public/2Q1GCSLozano.html
@@ -182,7 +182,7 @@
         <nav>
             <a href="../index.html"> My Portfolio ❀ </a>
             <a href="https://monrealkiko.github.io/2QPortfolioCSMonreal/public/2Q1GCesiumMonreal.html"> Kiko's Favorite Genshin Streamer ❀ </a>
-            <a href="ihearthebirdsinthesummerbreeze.html"> Meekah's Favorite Genshin Streamer ❀ </a>
+            <a href="https://mjgp2029.github.io/2QRepositoryLiPalec/public/2Q2GCesiumPalec.html"> Meekah's Favorite Genshin Streamer ❀ </a>
            </nav>
     <header>
 
