--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       <nav>
             <a href="public/2Q1GCSLozano.html">1st Graded Exercise</a>
              <a href="public/Q21NGCSLozano.html">1st Non-Graded Exercise</a>
+             <a href="public/Q3_2GCsLozano.html"> Q3 2nd Graded Exercise</a>
         </nav>
 
     </body>
